# SuperInfringementBros

./: .gitignore  CMakeLists.txt  README.md  make  play  run
CMakeModules/: FindSDL2_image.cmake
res/: bg.xcf
res/gfx/: bg.xcf
src/: background.c  background.h  collectable.c  collectable.h  constants.h  enemy.c  enemy.h  engine.c  engine.h  game.c  game.h  high_score.c  high_score.h  logger.c  logger.h  main.c  menu.c  menu.h  music.c  music.h  path.c  path.h  player.c  player.h  projectile.c  projectile.h  sfx.c  sfx.h  sprite.c  sprite.h  text.c  text.h  title.c  title.h  vector.c  vector.h  vfx.c  vfx.h
